--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <head>
     <script src="bundle.js" type="module"></script>
 
-    <title>Document</title>
+    <title>Chart</title>
 </head>
 <body>
-<canvas id="myChart"></canvas>
+
+    
+    <button id="myButton">Click me</button>
+
+    <div id="myChart1">
+        <canvas id="myChart"width="400" height="100">Első Chart</canvas>
+    </div>
+
 </body>
 </html>
